[package]
name = "crypto_news"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["fs"] }
tower = "0.5"


